# elf_loader

./: .gitignore  Cargo.toml  LICENSE-MIT.md  README.md
src/: elf.rs  error.rs  lib.rs  load.rs  parse.rs  reloc.rs
tests/: bss_rodata_data.elf  bss_rodata_data.rs  simple.elf  simple.rs
tests/elf_src/: Cargo.toml  bss_rodata_data.rs  build.fish  simple.rs  x86_64-unknown-none.json  x86_64-unknown-none.ld
tests/os/: mod.rs
